Ajout de la page de chat du GUI